--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint": "^6.0.0 || >=7.0.0"
   },
   "engines": {
-    "node": "12.x",
+    "node": "10.x || 12.x || 14.x",
     "yarn": ">=1.22.4"
   }
 }
