fix: fix publish target file

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "Apache-2.0",
   "author": "hrb-yamamoto-katsuya <yamamoto.katsuya@hrbrain.co.jp>",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
     "precommit": "lint-staged",
