--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1"
+    "@typescript-eslint/parser": "^3.6.1",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/eslint": "^7.2.0",
+    "@types/minimatch": "^3.0.3",
     "@types/mocha": "^8.0.0",
     "@types/prettier": "^2.0.2",
     "@types/react": "^16.9.43",
