--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,47 +3,29 @@ on:
   pull_request:
     types:
       - closed
+
 jobs:
   release:
-    name: Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'releases/v')
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: master
+          ref: main
 
-      - uses: actions/cache@v2
-        id: cache
+      - uses: actions/setup-node@v2
         with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          node-version: 12.22.6
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@hrbrain"
 
-      - name: Use Node.js 12
-        uses: actions/setup-node@v1
-        with:
-          registry-url: "https://registry.npmjs.org"
-          node-version: '12.x'
+      - run: yarn --prefer-offline
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn
-
-      - run: npx shipjs trigger
+      - run: yarn shipjs trigger
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
-      - name: setup Node to publish to GitHub Packages
-        uses: actions/setup-node@v1
-        with:
-          registry-url: 'https://npm.pkg.github.com'
-          node-version: '12.x'
-
-      - name: publish to GitHub Packages
-        run: yarn publish
-        env:
+          NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
